feat: allow to find groups by HRIDs and environment ID